main ve section yapısı oluşturuldu

--- a/index.html
+++ b/index.html
@@ -30,5 +30,151 @@
             </div>   
         </div>
     </header>
+    main>
+                <section class="section1">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-12 col-md-6 col-lg-6" >
+                                <h1 class="section1__title">COVID-19 Alert</h1>
+                                <h2 class="section1__title1">Stay at Home quarantine <br> To stop Corona virus <br></h2>
+                                <p class="section1__desc">There is no specific medicine to prevent or treat coronavirus disease (COVID-19). People may need supportive care to .</p>
+                                <a href="" class="button button--color button--bradius button--f-size button--f-weight" >Let Us Help</a>
+                            </div>     
+                            <div class="col-12 col-md-6 col-lg-6">
+                                <figure class="section1__img ">
+                                    <img src="https://i.hizliresim.com/Ws99Ke.png" alt="section1-img">
+                                </figure>
+                            </div>    
+                                
+                        </div>
+                    </div>
+                </section>    
+                <section class="section2">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-12 col-md-6 col-lg-6">
+                                <figure class="section2__img">
+                                    <img src="https://i.hizliresim.com/QRcNcW.png" alt="covid.">
+                                </figure>
+                            </div>
+                            <div class="col-12 col-md-6 col-lg-6">
+                                <h1 class="section2__title">What Is Covid-19</h1>
+                                <h2 class="section2__title2">Coronavirus</h2>
+                                <p class="section2__desc">Corona viruses are a type of virus. There are many different kinds, and some cause disease. A newly identified type has caused a recent outbreak of respiratory illness now called COVID-19.Lauren Sauer, M.S., the director of operations with the Johns Hopkins Office of Critical Event Preparedness and Response</p>
+                                <a href="" class="button button--c--bg button--color button--bradius button--f-size button--f-weight">Learn More</a>
+                            </div>   
+                        </div>
+                    </div>
+                </section>
+                <section class="section3">
+                    <div class="container">
+                            <h1 class="section3__title">Covid-19</h1>
+                            <h2 class="section3__title2">Contagion</h2>
+                            <p class="section3__desc">Corona viruses are a type of virus. There are many different kinds, and some cause disease. A newly identified type</p>
+
+                            <div class="row">
+                                <div class="col-12 col-md-6 col-lg-4">
+                                    <div class="card card--active">
+                                        <figure class="card__img">
+                                            <img src="https://i.hizliresim.com/Ioe1X6.png" alt="card1">
+                                        </figure>
+                                        <h2 class="card__baslik">Air Transmission</h2>
+                                        <p class="card__desc"> Objectively evolve tactical expertise before extensible initiatives. Efficiently simplify</p>
+                                    </div>
+                                </div>
+                                <div class="col-12 col-md-6 col-lg-4">
+                                    <div class="card">
+                                        <figure class="card__img">
+                                            <img src="https://i.hizliresim.com/z23o6y.png" alt="card1">
+                                        </figure>
+                                        
+                                        <h2 class="card__baslik">Human Contacts</h2>
+                                        <p class="card__desc">Washing your hands is one of thesimplest ways you can protect</p>
+                                    </div>
+                                </div>
+                                <div class="col-12 col-md-6 col-lg-4">
+                                    <div class="card">
+                                        <figure class="card__img">
+                                            <img src="https://i.hizliresim.com/0utQD3.png" alt="card1">
+                                        </figure>
+                                        <h2 class="card__baslik">Containted Objects</h2>
+                                        <p class="card__desc">Use the tissue while sneezing,In this way, you can protect your droplets.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section class="section4">
+                    <div class="container">
+                        <h1 class="section4__title">Covid-19</h1>
+                        <h2 class="section4__title2">Symptomps</h2>
+                        <p class="section4__desc">Corona viruses are a type of virus. There are many different kinds, and some cause disease. A newly identified type has caused a recent outbreak of respiratory </p>
+                        <figure>
+                            <img src="https://i.hizliresim.com/6dkbTe.png" alt="symptoms">
+                        </figure>
+                    </div>
+                </section>
+                <section class="section5">
+                    <div class="container">
+                        <h1 class="section5__title ">Covid-19</h1>
+                        <h2 class="section5__title2 section5__title2--text">What Should We o</h2>
+                        <p class="section5__desc section5__desc--text">Corona viruses are a type of virus. There are many different kinds, and some cause disease. A newly identified type has caused</p>
+                        <div class="row">
+                            <div class="col-12 col-md-6 col-lg-6">
+                                <figure class="section5__img">
+                                    <img src="https://i.hizliresim.com/qeD6Ed.png" alt="covid.">
+                                </figure>
+                            </div>
+                            <div class="col-12 col-md-6 col-lg-6">
+                                <h2 class="section5__title2 section5__title2--bottom ">Wear Masks</h2>
+                                <p class="section5__desc">Continually seize impactful vortals rather than future-proof supply chains. Uniquely exploit emerging niches via fully tested meta-services. Competently pursue standards compliant leadership skills vis-a-vis pandemic "outside the box" thinking. Objectively </p>
+                            </div>
+                        </div>
+                        <div class="row"> 
+                        <div class="col-12 col-md-6 col-lg-6">
+                            <figure class="section5__img">
+                                <img src="https://i.hizliresim.com/V5OSZg.png" alt="covid.">
+                            </figure>
+                        </div>
+                        <div class="col-12 col-md-6 col-lg-6">
+                            <h2 class="section5__title2 section5__title2--bottom">Wash Your Hands</h2>
+                            <p class="section5__desc">Continually seize impactful vortals rather than future-proof supply chains. Uniquely exploit emerging niches via fully tested meta-services. Competently pursue standards compliant leadership skills vis-a-vis pandemic "outside the box" thinking. Objectively Continually seize impactful vortals </p>
+                        </div> 
+                        </div>
+                        <div class="row">
+                        <div class="col-12 col-md-6 col-lg-6">
+                            <figure class="section5__img">
+                                <img src="https://i.hizliresim.com/xXl6ia.png" alt="covid.">
+                            </figure>
+                        </div>
+                        <div class="col-12 col-md-6 col-lg-6">
+                            <h2 class="section5__title2 section5__title2--bottom">Use nose -  rag</h2>
+                            <p class="section5__desc">Continually seize impactful vortals rather than future-proof supply chains. Uniquely exploit emerging niches via fully tested meta-services. Competently pursue standards compliant leadership skills vis-a-vis pandemic "outside the box" thinking. Objectively </p>
+                        </div>
+                        </div>
+                        <div class="row"> 
+                        <div class="col-12 col-md-6 col-lg-6">
+                            <figure class="section5__img">
+                                <img src="https://i.hizliresim.com/nfAxYQ.png" alt="covid.">
+                            </figure>
+                        </div>
+                        <div class="col-12 col-md-6 col-lg-6">
+                            <h2 class="section5__title2 section5__title2--bottom">Avoid contacts</h2>
+                            <p class="section5__desc">Continually seize impactful vortals rather than future-proof supply chains. Uniquely exploit emerging niches via fully tested meta-services. Competently pursue standards compliant leadership skills vis-a-vis pandemic</p>
+                        </div>
+                        </div> 
+                    </div>
+                </section>
+                <section class="section6">
+                    <div class="container">
+                        <h1 class="section6__baslik">Have Question in mind?<br>
+                            Let us help you</h1>
+                        <input type="mail" placeholder="snmonydemo@gmail.com" class="section6__w100">
+                        <a href="" class="button button--font-c">Send</a>
+
+                    </div>
+                </section>
+            </main>
 </body>
 </html>
