--- a/index.html
+++ b/index.html
@@ -176,5 +176,30 @@
                     </div>
                 </section>
             </main>
+            <footer class="footer-s">
+                <div class="container">
+                    <div class="nav-f">
+                        <figure class="nav__img">
+                            <img src="https://i.hizliresim.com/5OAkrJ.png" alt="logo">
+                        </figure>    
+                        <nav class="nav-a">
+                            <a href="" class="nav-a__item ">Overwiev</a>
+                            <a href="" class="nav-a__item">Symptams</a>
+                            <a href="" class="nav-a__item">Contagion</a>
+                            <a href="" class="nav-a__item">Prevention</a>
+                            <a href="" class="nav-a__item">Treatment</a>
+                        </nav>
+                        <figure class="nav__img">
+                            <img src="https://i.hizliresim.com/K1JZE2.png" alt="logo">
+                            <img src="https://i.hizliresim.com/3BCSkw.png" alt="logo">
+                            <img src="https://i.hizliresim.com/6wq1qg.png" alt="logo">
+                            <img src="https://i.hizliresim.com/fIQgcV.png" alt="logo">
+                        </figure> 
+                    </div>
+                </div>
+            </footer>
+          </div>
+      </div>
+      <p class="son">2020 @ All reserved by pixelspark.co</p>
 </body>
 </html>
